--- a/style.css
+++ b/style.css
@@ -158,7 +158,12 @@ body
 @media only screen and (max-width: 414px) {	
 	.container {
 		width: 90%;
-	}
+    }
+    
+    .grid-item{
+        padding-top:26px;
+        padding-bottom:50px;
+    }
 }
 
 @media only screen and (max-width: 320px) {	
